# impositioner

./: .gitignore  .travis.yml  Makefile  README.md  imposer.py  impositioner.py  pyproject.toml  setup.py
impositioner/: __init__.py  cli.py  core.py
tests/: context.py  test_basic.py  test_pdf.py
tools/: pdfSampler.py
