[tool.poetry]
name = "impositioner"
version = "0.1.0"
description = "Impose a PDF file for booklet printing"
authors = ["sgelb <stephan.halbritter@haw-hamburg.de>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pdfrw = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-cov = "^2.6"
pytype = "^2019.3"
reportlab = "^3.5"

[tool.poetry.scripts]
impositioner = 'impositioner.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

