[tool.poetry]
name = "impositioner"
version = "0.2.0"
description = "Impose a PDF file for booklet printing"
authors = ["sgelb <sgelb@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pdfrw = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"
pytype = { version = "^2022", python = ">=3.7,<3.11" }
reportlab = "^3.5"
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.poetry.scripts]
impositioner = 'impositioner.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

